--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
     <link rel="stylesheet" href="style.css">
     <title>Sustentabilidade no campo</title>
 </head>
-<body>
-<hearder>
+ <body>
+  <hearder>
     <h2>Sustentabilidade no Campo</h2>
-    
+  </header>  
+ </body>
+</html>
