--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
     <title>Sustentabilidade no campo</title>
 </head>
  <body>
+    <section>
   <hearder>
     <h2>Sustentabilidade no Campo</h2>
   </header>  
+    </section>
  </body>
 </html>
