--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 </head>
  <body>
   <hearder>
-    <h1>Sustentabilidade no Campo</h1>
+    <h1>Sustentabilidade no Meio Agrícola</h1>
   </header> 
   <p>
-    
+    Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental.
   </p>
  </body>
 </html>
