--- a/index.html
+++ b/index.html
@@ -13,8 +13,10 @@
   <hearder>
     <h1>Sustentabilidade no Meio Agrícola</h1>
   </header> 
+  <section>
   <p>
     Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental.
   </p>
+</section>
  </body>
 </html>
