--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
     <title>Sustentabilidade no campo</title>
 </head>
  <body>
+  <header>
   <hearder>
     <h1>Sustentabilidade no Meio Agrícola</h1>
   </header> 
+</header>
   <section>
   <p>
     Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental.
