--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
    </header> 
 </header>
   <section>
+    <h2>
+      Sustentabilidade no Meio Agrícola:Ideias e Aplicações
+    </h2>
   <p>
     Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental.
   </p>
