--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <title>Sustentabilidade no campo</title>
 </head>
  <body>
+  <header>
 <header>
     <h1>Sustentabilidade no Meio Agrícola</h1>
 </header>
+</header>
+
 <h2>
   Sustentabilidade no Meio Agrícola:Ideias e Aplicações
 </h2>
