--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
     <title>Sustentabilidade no campo</title>
 </head>
  <body>
-  <nav class="dropdownmenu">
+  <nav id="slide-menu">
     <ul>
-      <li><a href="http://www.jochaho.com/wordpress/">Home</a></li>
-      <li><a href="http://www.jochaho.com/wordpress/about-pritesh-badge/">About Me</a></li>
-      <li><a href="#">Articles on HTML5 & CSS3</a>
-        <ul id="submenu">
-          <li><a href="http://www.jochaho.com/wordpress/difference-between-svg-vs-canvas/">Difference between SVG vs. Canvas</a></li>
-          <li><a href="http://www.jochaho.com/wordpress/new-features-in-html5/">New features in HTML5</a></li>
-          <li><a href="http://www.jochaho.com/wordpress/creating-links-to-sections-within-a-webpage/">Creating links to sections within a webpage</a></li>
-        </ul>
-      </li>
-      <li><a href="http://www.jochaho.com/wordpress/category/news/">News</a></li>
-      <li><a href="http://www.jochaho.com/wordpress/about-pritesh-badge/">Contact Us</a></li>
+      <li class="timeline">Timeline</li>
+      <li class="events">Events</li>
+      <li class="calendar">Calendar</li>
+      <li class="sep settings">Settings</li>
+      <li class="logout">Logout</li>
     </ul>
   </nav>
+  <!-- Content panel -->
+  <div id="content">
+    <div class="menu-trigger"></div>
+    <h1>iOS style sliding menu</h1>
+    <p>Here's an easy way to create an iOS style, side sliding menu.</p>
+  </div>
   <header>
     <h1>Sustentabilidade no Meio Agrícola</h1>
     </header>
