--- a/index.html
+++ b/index.html
@@ -11,20 +11,15 @@
     <title>Sustentabilidade no campo</title>
 </head>
  <body>
-  <nav id="slide-menu">
+  <a href="#menu" id="toggle"><span></span></a>
+
+  <div id="menu">
     <ul>
-      <li class="timeline">Timeline</li>
-      <li class="events">Events</li>
-      <li class="calendar">Calendar</li>
-      <li class="sep settings">Settings</li>
-      <li class="logout">Logout</li>
+      <li><a href="#home">Home</a></li>
+      <li><a href="#about">About</a></li>
+      <li><a href="#contact">Contact</a></li>
     </ul>
-  </nav>
-  <!-- Content panel -->
-  <div id="content">
-    <div class="menu-trigger"></div>
-    <h1>iOS style sliding menu</h1>
-    <p>Here's an easy way to create an iOS style, side sliding menu.</p>
+  </div>
   </div>
   <header>
     <h1>Sustentabilidade no Meio Agrícola</h1>
