--- a/index.html
+++ b/index.html
@@ -11,18 +11,15 @@
     <title>Sustentabilidade no campo</title>
 </head>
  <body>
+  <nav>
+    <ul>
+        <li><a href="#">Página Inicial</a></li>
+        <li><a href="#">Produtos</a></li>
+        <li><a href="#">Serviços</a></li>
+        <li><a href="#">Contato</a></li>
+    </ul>
+</nav>
   <header>
-    <h1>menu</h1>
-    <input type="checkbox" id="menu" class="caixa">
-    <label for="menu">
-     <h3 class="texto">MENU</h3> 
-   </label>
-   <ul class="lista">
-    <li class="item-da-lista"><a href="#index2.html">a</a>  </li>
-    <li class="item-da-lista"><a href="#index3.html">b</a>  </li>
-    <li class="item-da-lista"><a href="#index4.html">c</a>  </li>
-    <li class="item-da-lista"><a href="#index5.html">d</a>  </li>
-   </ul>
     <h1>Sustentabilidade no Meio Agrícola</h1>
     </header>
 <h2>
