--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.js">
-    <title>Sustentabilidade no campo</title>
+    <title>Sustentabilidade</title>
 </head>
  <body>
   <nav>
     <ul>
-        <li><a href="index2.html">Página Inicial</a></li>
-        <li><a href="index3.html">Produtos</a></li>
+        <li><a href="index2.html">Ideias</a></li>
+        <li><a href="index3.html"></a></li>
         <li><a href="index4.html">Serviços</a></li>
         <li><a href="index5.html">Contato</a></li>
     </ul>
