--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <body>
   <nav>
     <ul>
-        <li><a href="index2.html">Ideias</a></li>
+        <li><a href="index2.html"></a></li>
         <li><a href="index3.html">t</a></li>
         <li><a href="index4.html">Serviços</a></li>
         <li><a href="index5.html">Contato</a></li>
@@ -23,7 +23,7 @@
     <h1>Sustentabilidade no Meio Agrícola</h1>
     </header>
 <h2>
-  Sustentabilidade no Meio Agrícola:Ideias e Aplicações
+  Sustentabilidade no Meio Agrícola
 </h2>
   <section>
   <p>
