--- a/index3.html
+++ b/index3.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="style.js">
-    <title>Sustentabilidade no campo</title>
+    <title>Sustentabilidade</title>
 </head>
 <body>
     <nav>
@@ -20,15 +20,14 @@
       </ul>
   </nav>
     <header>
-      <h1>Sustentabilidade no Meio Agrícola</h1>
+      <h1>Tapete de cabelo humano</h1>
       </header>
   <h2>
     Sustentabilidade no Meio Agrícola:Ideias e Aplicações
   </h2>
     <section>
     <p>
-      Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental.
-    </p>
+      Tapetes feitos de cabelo humano têm sido usados por voluntários para reter o óleo e outros poluentes químicos de tempestades ou vazamentos causados por navios no mar.
   </section>
   
    </body>
