--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <body>
   <nav>
     <ul>
-        <li><a href="index2.html"></a></li>
+        <li><a href="index2.html"></a>alguma coisa etranha</li>
         <li><a href="index3.html">Ideias sustentaveis</a></li>
         <li><a href="index4.html">Serviços</a></li>
         <li><a href="index5.html">Contato</a></li>
