--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <ul>
         <li><a href="index2.html">alguma coisa etranha</a></li>
         <li><a href="index3.html">Ideias sustentaveis</a></li>
-        <li><a href="index4.html">Serviços</a></li>
+        <li><a href="index4.html">P</a></li>
         <li><a href="index5.html">Contato</a></li>
     </ul>
 </nav>
