--- a/index2.html
+++ b/index2.html
@@ -13,14 +13,14 @@
 <body>
     <nav>
       <ul>
-          <li><a href="index2.html">Página Inicial</a></li>
-          <li><a href="index3.html">Produtos</a></li>
+          <li><a href="index2.html">Pá</a></li>
+          <li><a href="index3.html">Ideias sustentaveis</a></li>
           <li><a href="index4.html">Serviços</a></li>
           <li><a href="index5.html">Contato</a></li>
       </ul>
   </nav>
     <header>
-      <h1>Sustentabilidade no Meio Agrícola</h1>
+      <h1>Sustentabilidade no Meio Agrícol</h1>
       </header>
   <h2>
     Sustentabilidade no Meio Agrícola:Ideias e Aplicações
