--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
  <body>
   <nav>
     <ul>
-        <li><a href="index2.html">alguma coisa estranha</a></li>
+        <li><a href="index.html">alguma coisa estranha</a></li>
         <li><a href="index3.html"></a></li>
         <li><a href="index4.html">P</a></li>
         <li><a href="index5.html">Ideias sustentaveis</a></li>
