--- a/index2.html
+++ b/index2.html
@@ -13,7 +13,7 @@
 <body>
     <nav>
       <ul>
-          <li><a href="index2.html">Pá</a></li>
+          <li><a href="index.html">Pá</a></li>
           <li><a href="index3.html">Ideias sustentaveis</a></li>
           <li><a href="index4.html">Serviços</a></li>
           <li><a href="index5.html">Contato</a></li>
