--- a/index4.html
+++ b/index4.html
@@ -23,7 +23,7 @@
       <h1>Sustentabilidade no Meio Agrícola</h1>
       </header>
   <h2>
-    Sustentabilidade no Meio Agrícola:Ideias e Aplicações
+    Sustentabilidade no Meio Agrícola
   </h2>
     <section>
     <p>
