--- a/index5.html
+++ b/index5.html
@@ -27,7 +27,7 @@
   <h2>
     Tapete de cabelo
   </h2>
-  <section id="batata">
+  <section class="batata">
     <img class="Tap" src="image.png" alt="tap">
   </section>
 
