--- a/index5.html
+++ b/index5.html
@@ -27,7 +27,7 @@
   <h2>
     Tapete de cabelo
   </h2>
-    <img class="Tap" src="image.png" alt="tap">
+    <img class="Tap" src="image copy.png" alt="tap">
 
    <section>
     <p>
