--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <h2>
   Sustentabilidade no Meio Agrícola
 </h2>
-  <section>
+  <section class="onion">
   <p>
     Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental.
   </p>
