--- a/index5.html
+++ b/index5.html
@@ -15,10 +15,10 @@
 <body>
     <nav>
       <ul>
-          <li><a href="index2.html">Página Inicial</a></li>
-          <li><a href="index3.html">Produtos</a></li>
-          <li><a href="index4.html">Serviços</a></li>
-          <li><a href="index5.html">Contato</a></li>
+          <li><a href="index.html">Página Inicial</a></li>
+          <li><a href="index2.html">Produtos</a></li>
+          <li><a href="index3.html">Serviços</a></li>
+          <li><a href="index4.html">Contato</a></li>
       </ul>
   </nav>
     <header>
