--- a/index3.html
+++ b/index3.html
@@ -14,8 +14,8 @@
 <body>
     <nav>
       <ul>
-          <li><a href="index2.html">Página Inicial</a></li>
-          <li><a href="index3.html">Produtos</a></li>
+          <li><a href="index.html">Página Inicial</a></li>
+          <li><a href="index2.html">Produtos</a></li>
           <li><a href="index4.html">Serviços</a></li>
           <li><a href="index5.html">Contato</a></li>
       </ul>
