--- a/index3.html
+++ b/index3.html
@@ -26,10 +26,19 @@
   <h2>
     Sustentabilidade no Meio Agrícola
   </h2>
-    <section>
-    <p>
-      Tapetes feitos de cabelo humano têm sido usados por voluntários para reter o óleo e outros poluentes químicos de tempestades ou vazamentos causados por navios no mar.
+    <section class="onion">
+    <p >
+Os agroquímicos são produtos químicos amplamente utilizados na agricultura para proteger as plantações e melhorar a produtividade dos cultivos. Entre os principais tipos estão os pesticidas, herbicidas, fungicidas e fertilizantes químicos. Os pesticidas são essenciais para controlar pragas que podem causar danos significativos às colheitas, enquanto os herbicidas são empregados para eliminar ervas daninhas que competem por recursos essenciais. Fungicidas são usados para prevenir e tratar doenças fúngicas que podem comprometer a saúde das plantas. Por fim, fertilizantes químicos fornecem nutrientes como nitrogênio, fósforo e potássio, fundamentais para o crescimento saudável das culturas.
+</p>
+
   </section>
+  <section class="potato">
+    <p>
+      Apesar dos benefícios, o uso indiscriminado de agroquímicos levanta preocupações ambientais e de saúde pública. A contaminação de solos e recursos hídricos, a resistência de pragas e ervas daninhas aos produtos químicos, e os potenciais efeitos adversos na fauna não-alvo são questões críticas. Por essa razão, muitos países adotam regulamentações rigorosas para o uso desses produtos, visando mitigar impactos negativos e promover práticas agrícolas sustentáveis.
+
+      Em resposta às preocupações ambientais, há um crescente movimento em direção a métodos de agricultura mais sustentáveis, como a agricultura orgânica e o uso integrado de manejo de pragas (IPM), que visam reduzir a dependência de agroquímicos sintéticos. Essas abordagens promovem práticas que preservam a biodiversidade, melhoram a saúde do solo e reduzem os riscos para a saúde humana e ambiental, enquanto ainda buscam manter a produtividade agrícola necessária para atender à demanda global por alimentos.
+</p>
+</section>
   
    </body>
   </html>
