--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
  <body>
   <nav>
     <ul>
-        <li><a href="index2.html"></a></li>
-        <li><a href="index3.html">uu</a></li>
+        <li><a href="index2.html">a</a></li>
+        <li><a href="index3.html">Agroquimicos</a></li>
         <li><a href="index4.html">P</a></li>
         <li><a href="index5.html">Tapete de cabelo</a></li>
     </ul>
