--- a/index5.html
+++ b/index5.html
@@ -12,7 +12,7 @@
    
     <title>Sustentabilidade no campo</title>
 </head>
-<body class="carrot">
+<body>
     <nav>
       <ul>
           <li><a href="index.html">Sustentabilidade</a></li>
@@ -27,7 +27,9 @@
   <h2>
     Tapete de cabelo
   </h2>
+  <section class="carrot">
     <img class="Tap" src="image.png" alt="tap">
+  </section>
 
    <section>
     <p>
