--- a/index5.html
+++ b/index5.html
@@ -34,6 +34,8 @@
    <section>
     <p>
       Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental.
+
+      O tapete de cabelo ou de fibra de coco e abacaxi pode ajudar a conter a poluiçao aquatica causada por oleos e de metais pesados, prendo-os em suas fibras, ajudando a limpar as aguas.
     </p>
   </section>
   
