--- a/index5.html
+++ b/index5.html
@@ -31,7 +31,7 @@
     <img class="Tap" src="image.png" alt="tap">
   </section>
 
-   <section>
+   <section class="gold">
     <p>
       Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental.
 
