--- a/index2.html
+++ b/index2.html
@@ -13,10 +13,10 @@
 <body>
     <nav>
       <ul>
-          <li><a href="index.html">Pá</a></li>
-          <li><a href="index3.html">Ideias sustentaveis</a></li>
-          <li><a href="index4.html">Serviços</a></li>
-          <li><a href="index5.html">Contato</a></li>
+          <li><a href="index.html">Sustentabilidade</a></li>
+          <li><a href="index3.html">Agroquimicos</a></li>
+          <li><a href="index4.html">Alternativa à agroquímicos</a></li>
+          <li><a href="index5.html">Tapete de cabelo</a></li>
       </ul>
   </nav>
     <header>
