--- a/index4.html
+++ b/index4.html
@@ -28,7 +28,16 @@
   </h2>
     <section>
     <p>
-      Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental.
+      
+      Manejo Integrado de Pragas (MIP): Combina o uso de várias técnicas de controle de pragas, como controle biológico (introdução de predadores naturais), controle cultural (alterações no ambiente de cultivo para desencorajar pragas) e controle físico (uso de barreiras físicas ou armadilhas), reduzindo assim a dependência de pesticidas.
+    </p>
+    <br>
+    <p>
+
+    </p>
+    <br>
+    <p>
+      
     </p>
   </section>
   
