--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <ul>
         <li><a href="index2.html">a</a></li>
         <li><a href="index3.html">Agroquimicos</a></li>
-        <li><a href="index4.html">P</a></li>
+        <li><a href="index4.html">Alternativa à agroquímicos</a></li>
         <li><a href="index5.html">Tapete de cabelo</a></li>
     </ul>
 </nav>
