--- a/index4.html
+++ b/index4.html
@@ -33,11 +33,11 @@
     </p>
     <br>
     <p>
-
+      Tecnologias de Precisão: Utiliza dados e tecnologias avançadas, como sensores e sistemas de informação geográfica (GIS), para aplicar insumos agrícolas de maneira mais precisa e eficiente, reduzindo o desperdício e minimizando o impacto ambiental.
     </p>
     <br>
     <p>
-      
+
     </p>
   </section>
   
