--- a/index4.html
+++ b/index4.html
@@ -37,7 +37,7 @@
     </p>
     <br>
     <p>
-
+      Melhoramento Genético: Desenvolve variedades de plantas mais resistentes a pragas, doenças e condições adversas, reduzindo assim a necessidade de pesticidas e outros agroquímicos.
     </p>
   </section>
   
