--- a/index4.html
+++ b/index4.html
@@ -26,7 +26,7 @@
   <h2>
     Sustentabilidade no Meio Agrícola
   </h2>
-    <section>
+    <section class="potato">
     <p>
       
       Manejo Integrado de Pragas (MIP): Combina o uso de várias técnicas de controle de pragas, como controle biológico (introdução de predadores naturais), controle cultural (alterações no ambiente de cultivo para desencorajar pragas) e controle físico (uso de barreiras físicas ou armadilhas), reduzindo assim a dependência de pesticidas.
