--- a/index4.html
+++ b/index4.html
@@ -27,16 +27,13 @@
     Sustentabilidade no Meio Agrícola
   </h2>
     <section class="potato">
-    <p>
-      
+    <p class="silver">
       Manejo Integrado de Pragas (MIP): Combina o uso de várias técnicas de controle de pragas, como controle biológico (introdução de predadores naturais), controle cultural (alterações no ambiente de cultivo para desencorajar pragas) e controle físico (uso de barreiras físicas ou armadilhas), reduzindo assim a dependência de pesticidas.
     </p>
-    <br>
-    <p>
+    <p class="silver">
       Tecnologias de Precisão: Utiliza dados e tecnologias avançadas, como sensores e sistemas de informação geográfica (GIS), para aplicar insumos agrícolas de maneira mais precisa e eficiente, reduzindo o desperdício e minimizando o impacto ambiental.
     </p>
-    <br>
-    <p>
+    <p class="silver">
       Melhoramento Genético: Desenvolve variedades de plantas mais resistentes a pragas, doenças e condições adversas, reduzindo assim a necessidade de pesticidas e outros agroquímicos.
     </p>
   </section>
