--- a/index4.html
+++ b/index4.html
@@ -42,8 +42,16 @@
     <p>
       Melhoramento Genético: Desenvolve variedades de plantas mais resistentes a pragas, doenças e condições adversas, reduzindo assim a necessidade de pesticidas e outros agroquímicos.
     </p>
-  </div>
+  </section> 
+  <section class="potato">
+    MIP exemplo: As joaninhas controlam a população desses insetos-praga de forma muito eficiente. Uma joaninha sozinha é capaz de se alimentar de 50 a 200 pulgões (a variação depende da espécie de joaninha), e por isso elas são muito utilizadas para realizar o controle biológico desta praga em áreas de cultivo agrícola.
   </section>
-  
+  <section class="potato">
+
+  </section>
+  <section class="potato">
+
+  </section>
    </body>
   </html>
+  
