--- a/index4.html
+++ b/index4.html
@@ -34,25 +34,24 @@
     </p>
   </section>
   <section class="potato">
-    MIP exemplo: As joaninhas controlam a população desses insetos-praga de forma muito eficiente. Uma joaninha sozinha é capaz de se alimentar de 50 a 200 pulgões (a variação depende da espécie de joaninha), e por isso elas são muito utilizadas para realizar o controle biológico desta praga em áreas de cultivo agrícola.
+    Exemplo: As joaninhas controlam a população desses insetos-praga de forma muito eficiente. Uma joaninha sozinha é capaz de se alimentar de 50 a 200 pulgões (a variação depende da espécie de joaninha), e por isso elas são muito utilizadas para realizar o controle biológico desta praga em áreas de cultivo agrícola.
   </section>
 <section class="onion">
 <P>
       Tecnologias de Precisão: Utiliza dados e tecnologias avançadas, como sensores e sistemas de informação geográfica (GIS), para aplicar insumos agrícolas de maneira mais precisa e eficiente, reduzindo o desperdício e minimizando o impacto ambiental.
 </p>
+<section class="potato">
+  O Sistema de Informações Geográficas(GIS) é um conjunto de sistemas de softwares e hardwares capazes de produzir, armazenar, processar, analisar e representar inúmeras informações sobre o espaço geográfico, tendo como produto final mapas temáticos, imagens de satélites, cartas topográficas, gráficos e tabelas.
+</section>
 </section>
 <section class="onion">
     <p>
       Melhoramento Genético: Desenvolve variedades de plantas mais resistentes a pragas, doenças e condições adversas, reduzindo assim a necessidade de pesticidas e outros agroquímicos.
     </p>
+    <section class="potato">
+
+    </section>
   </section> 
- 
-  <section class="potato">
-
-  </section>
-  <section class="potato">
-
-  </section>
    </body>
   </html>
   
