--- a/index4.html
+++ b/index4.html
@@ -41,7 +41,8 @@
       Tecnologias de Precisão: Utiliza dados e tecnologias avançadas, como sensores e sistemas de informação geográfica (GIS), para aplicar insumos agrícolas de maneira mais precisa e eficiente, reduzindo o desperdício e minimizando o impacto ambiental.
 </p>
 <section class="potato">
-  O Sistema de Informações Geográficas(GIS) é um conjunto de sistemas de softwares e hardwares capazes de produzir, armazenar, processar, analisar e representar inúmeras informações sobre o espaço geográfico, tendo como produto final mapas temáticos, imagens de satélites, cartas topográficas, gráficos e tabelas.
+
+  Exemplo: O Sistema de Informações Geográficas(GIS) é um conjunto de sistemas de softwares e hardwares capazes de produzir, armazenar, processar, analisar e representar inúmeras informações sobre o espaço geográfico, tendo como produto final mapas temáticos, imagens de satélites, cartas topográficas, gráficos e tabelas.
 </section>
 </section>
 <section class="onion">
@@ -49,7 +50,11 @@
       Melhoramento Genético: Desenvolve variedades de plantas mais resistentes a pragas, doenças e condições adversas, reduzindo assim a necessidade de pesticidas e outros agroquímicos.
     </p>
     <section class="potato">
-
+      O melhoramento genético de plantas é a produção de vegetais por cruzamento seletivo, hibridização ou ferramentas de biotecnologia. É o mecanismo de produção de novas variedades de plantas para horticultura e agricultura.
+    
+    </section>
+    <section class="potato">
+      Exemplo: O cultivo de frutas sem semente, como a melancia e a uva, que foram genéticamente melhoradas para que não possuissem semnetes e fossem mais resistentes a pragas.
     </section>
   </section> 
    </body>
