--- a/index4.html
+++ b/index4.html
@@ -50,6 +50,7 @@
     <p>
       Melhoramento Genético: Desenvolve variedades de plantas mais resistentes a pragas, doenças e condições adversas, reduzindo assim a necessidade de pesticidas e outros agroquímicos.
     </p>
+    </section>
     <section class="potato">
       O melhoramento genético de plantas é a produção de vegetais por cruzamento seletivo, hibridização ou ferramentas de biotecnologia. É o mecanismo de produção de novas variedades de plantas para horticultura e agricultura.
     
