--- a/index4.html
+++ b/index4.html
@@ -14,10 +14,10 @@
 <body>
     <nav>
       <ul>
-          <li><a href="index.html">Página Inicial</a></li>
+          <li><a href="index.html">Sustentabilidade</a></li>
           <li><a href="index2.html">Produtos</a></li>
-          <li><a href="index3.html">Serviços</a></li>
-          <li><a href="index5.html">Contato</a></li>
+          <li><a href="index3.html">Agroquimicos</a></li>
+          <li><a href="index5.html">Tapete de cabelo</a></li>
       </ul>
   </nav>
     <header>
