--- a/index2.html
+++ b/index2.html
@@ -23,12 +23,16 @@
       <h1>Sustentabilidade no Meio Agrícol</h1>
       </header>
   <h2>
-    Sustentabilidade no Meio Agrícola
+    Energia Renovavel
   </h2>
-    <section>
+    <section class="onion">
     <p>
-      Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental.
-    </p>
+      As energias renováveis são fontes de energia que se regeneram naturalmente com o tempo e não se esgotam. Elas são a parte mais importante da transição para um sistema de energia que abandona os combustíveis fósseis, combatendo assim o aquecimento global. Além disso, são energias limpas que protegem a saúde humana e o meio ambiente.
+    </p> 
+    
+  </section>
+  <section class="potato">
+ O uso de energias renováveis ajuda a diminuir o impacto negativo que a agricultura vem causando ao usar petróleo em suas maquinas agricolas.
   </section>
   
    </body>
