--- a/index2.html
+++ b/index2.html
@@ -34,6 +34,9 @@
   <section class="potato">
  O uso de energias renováveis ajuda a diminuir o impacto negativo que a agricultura vem causando ao usar petróleo em suas maquinas agricolas.
   </section>
+  <section class="potato">
+    Exemplos:
+  </section>
   
    </body>
   </html>
