--- a/index3.html
+++ b/index3.html
@@ -15,7 +15,7 @@
     <nav>
       <ul>
           <li><a href="index.html">Sustentabilidade</a></li>
-          <li><a href="index2.html">Produtos</a></li>
+          <li><a href="index2.html">Energia Renovavel</a></li>
           <li><a href="index4.html">Alternativa à agroquímicos</a></li>
           <li><a href="index5.html">Tapete de cabelo</a></li>
       </ul>
