--- a/index5.html
+++ b/index5.html
@@ -16,7 +16,7 @@
     <nav>
       <ul>
           <li><a href="index.html">Sustentabilidade</a></li>
-          <li><a href="index2.html">Produtos</a></li>
+          <li><a href="index2.html">Energia Renovavel</a></li>
           <li><a href="index3.html">Agroquimicos</a></li>
           <li><a href="index4.html">Alternativa à agroquímicos</a></li>
       </ul>
