--- a/index2.html
+++ b/index2.html
@@ -32,7 +32,7 @@
     
   </section>
   <section class="potato">
- O uso de energias renováveis ajuda a diminuir o impacto negativo que a agricultura vem causando ao usar petróleo em suas maquinas agricolas.
+ O uso de energias renováveis ajuda a diminuir o impacto negativo que a agricultura vem causando ao usar petróleo em suas maquinas agricolas. Além disso, o petróleo não é renovável, portanto, é algo que vai acabar, diferente de, por exemplo, a energia eólica, que ultiliza o vento, algo que não acaba.
   </section>
   <section class="potato">
     Exemplos:
