--- a/index2.html
+++ b/index2.html
@@ -35,7 +35,7 @@
  O uso de energias renováveis ajuda a diminuir o impacto negativo que a agricultura vem causando ao usar petróleo em suas maquinas agricolas. Além disso, o petróleo não é renovável, portanto, é algo que vai acabar, diferente de, por exemplo, a energia eólica, que ultiliza o vento, algo que não acaba.
   </section>
   <section class="potato">
-    Exemplos:
+    Exemplos: São exemplos de fontes renováveis: hídrica (energia da água dos rios), solar (energia do sol), eólica (energia do vento), biomassa (energia de matéria orgânica), geotérmica (energia do interior da Terra) e oceânica (energia das marés e das ondas).
   </section>
   
    </body>
