--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
   <p>
     Sustentabilidade é a capacidade de uso consciente dos recursos naturais sem comprometer o bem-estar das gerações futuras. Seu objetivo principal é encontrar o equilíbrio entre o desenvolvimento econômico e a preservação ambiental.
   </p>
-  
+  <section class="carrot">
+    <img class="Tap" src="image copy 3.png" alt="tap">
+  </section>
 </section> 
 <section class="potato">
   A sustentabilidade no meio agrícola é um campo dinâmico que busca equilibrar a produção de alimentos com a conservação dos recursos naturais e o bem-estar das comunidades rurais. Isso implica não apenas adotar práticas que minimizem o impacto ambiental, como o uso eficiente da água e a conservação do solo, mas também promover sistemas agrícolas que sejam resilientes e adaptáveis ​​às mudanças climáticas. A diversificação de culturas, por exemplo, não apenas melhora a saúde do solo, mas também reduz o risco de perdas devido a condições climáticas adversas, beneficiando a segurança alimentar e a estabilidade econômica das áreas rurais.
