--- a/index3.html
+++ b/index3.html
@@ -30,7 +30,10 @@
     <p >
 Os agroquímicos são produtos químicos amplamente utilizados na agricultura para proteger as plantações e melhorar a produtividade dos cultivos. Entre os principais tipos estão os pesticidas, herbicidas, fungicidas e fertilizantes químicos. Os pesticidas são essenciais para controlar pragas que podem causar danos significativos às colheitas, enquanto os herbicidas são empregados para eliminar ervas daninhas que competem por recursos essenciais. Fungicidas são usados para prevenir e tratar doenças fúngicas que podem comprometer a saúde das plantas. Por fim, fertilizantes químicos fornecem nutrientes como nitrogênio, fósforo e potássio, fundamentais para o crescimento saudável das culturas.
 </p>
-
+</section>
+<section class="carrot">
+  <img class="Tap" src="image copy 4.png" alt="tap">
+</section> 
   </section>
   <section class="potato">
     <p>
