--- a/index4.html
+++ b/index4.html
@@ -34,7 +34,7 @@
     </p>
   </section>
   <section class="carrot">
-    <img class="Tap" src="image copy 5.png" alt="tap">
+    <img class="Tap" src="image copy .png" alt="tap">
   </section>
   <section class="potato">
     Exemplo: As joaninhas controlam a população desses insetos-praga de forma muito eficiente. Uma joaninha sozinha é capaz de se alimentar de 50 a 200 pulgões (a variação depende da espécie de joaninha), e por isso elas são muito utilizadas para realizar o controle biológico desta praga em áreas de cultivo agrícola.
