--- a/index4.html
+++ b/index4.html
@@ -49,7 +49,9 @@
 
   Exemplo: O Sistema de Informações Geográficas(GIS) é um conjunto de sistemas de softwares e hardwares capazes de produzir, armazenar, processar, analisar e representar inúmeras informações sobre o espaço geográfico, tendo como produto final mapas temáticos, imagens de satélites, cartas topográficas, gráficos e tabelas.
 </section>
-
+<section class="carrot">
+  <img class="Tap" src="image copy 3.png" alt="tap">
+</section>
 <section class="onion">
     <p>
       Melhoramento Genético: Desenvolve variedades de plantas mais resistentes a pragas, doenças e condições adversas, reduzindo assim a necessidade de pesticidas e outros agroquímicos.
@@ -63,6 +65,9 @@
       Exemplo: O cultivo de frutas sem semente, como a melancia e a uva, que foram genéticamente melhoradas para que não possuissem semnetes e fossem mais resistentes a pragas.
     </section>
   </section> 
+  <section class="carrot">
+    <img class="Tap" src="image copy.png" alt="tap">
+  </section>
    </body>
   </html>
   
