--- a/index4.html
+++ b/index4.html
@@ -66,7 +66,7 @@
     </section>
   </section> 
   <section class="carrot">
-    <img class="Tap" src="image copy.png" alt="tap">
+    <img class="Tap" src="image copy 6.png" alt="tap">
   </section>
    </body>
   </html>
