--- a/index.html
+++ b/index.html
@@ -40,6 +40,8 @@
 Além disso, a sustentabilidade agrícola também se concentra em promover práticas que respeitem os ecossistemas locais e promovam a biodiversidade. Isso inclui a criação de habitats para polinizadores naturais, como abelhas e borboletas, que desempenham um papel crucial na produção de alimentos. Ao integrar práticas agroecológicas e técnicas de manejo integrado de pragas, os agricultores podem reduzir a dependência de pesticidas sintéticos, promovendo assim a saúde ambiental e a qualidade dos alimentos produzidos. Esses esforços não apenas protegem o meio ambiente, mas também contribuem para a criação de sistemas agrícolas mais resilientes e sustentáveis a longo prazo.
 </section>
 
-
+<footer>
+  <a href=https://www.greenpeace.org/brasil/>ajude o Brasil a ter um futuro mais sustentavel</a>
+</footer>
  </body>
 </html>
