--- a/index4.html
+++ b/index4.html
@@ -68,6 +68,9 @@
   <section class="carrot">
     <img class="Tap" src="image copy 6.png" alt="tap">
   </section>
+  <footer>
+    <a href=https://www.greenpeace.org/brasil/>ajude o Brasil a ter um futuro mais sustentavel</a>
+  </footer>
    </body>
   </html>
   
