--- a/index5.html
+++ b/index5.html
@@ -38,6 +38,8 @@
       O tapete de cabelo ou de fibra de coco e abacaxi pode ajudar a conter a poluiçao aquatica causada por oleos e de metais pesados, prendo-os em suas fibras, ajudando a limpar as aguas.
     </p>
   </section>
-  
+  <footer>
+    <a href=https://www.greenpeace.org/brasil/>ajude o Brasil a ter um futuro mais sustentavel</a>
+  </footer>
    </body>
   </html>
