--- a/index2.html
+++ b/index2.html
@@ -41,6 +41,8 @@
   <section class="potato">
     Exemplos: São exemplos de fontes renováveis: hídrica (energia da água dos rios), solar (energia do sol), eólica (energia do vento), biomassa (energia de matéria orgânica), geotérmica (energia do interior da Terra) e oceânica (energia das marés e das ondas).
   </section>
-  
+  <footer>
+    <a href=https://www.greenpeace.org/brasil/>ajude o Brasil a ter um futuro mais sustentavel</a>
+  </footer>
    </body>
   </html>
