--- a/index3.html
+++ b/index3.html
@@ -43,6 +43,8 @@ Os agroquímicos são produtos químicos amplamente utilizados na agricultura pa
       Em resposta às preocupações ambientais, há um crescente movimento em direção a métodos de agricultura mais sustentáveis, como a agricultura orgânica e o uso integrado de manejo de pragas (IPM), que visam reduzir a dependência de agroquímicos sintéticos. Essas abordagens promovem práticas que preservam a biodiversidade, melhoram a saúde do solo e reduzem os riscos para a saúde humana e ambiental, enquanto ainda buscam manter a produtividade agrícola necessária para atender à demanda global por alimentos.
 </p>
 </section>
-  
+<footer>
+  <a href=https://www.greenpeace.org/brasil/>ajude o Brasil a ter um futuro mais sustentavel</a>
+</footer>
    </body>
   </html>
