--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ Além disso, a sustentabilidade agrícola também se concentra em promover prát
 </section>
 
 <footer>
-  <a href=https://www.greenpeace.org/brasil/>ajude o Brasil a ter um futuro mais sustentavel</a>
+  <a href=https://www.greenpeace.org/brasil/>Ajude o Brasil a ter um futuro mais sustentavel</a>
 </footer>
  </body>
 </html>
