--- a/index4.html
+++ b/index4.html
@@ -69,7 +69,7 @@
     <img class="Tap" src="image copy 6.png" alt="tap">
   </section>
   <footer>
-    <a href=https://www.greenpeace.org/brasil/>ajude o Brasil a ter um futuro mais sustentavel</a>
+    <a href=https://www.greenpeace.org/brasil/>Ajude o Brasil a ter um futuro mais sustentavel</a>
   </footer>
    </body>
   </html>
