--- a/index5.html
+++ b/index5.html
@@ -39,7 +39,7 @@
     </p>
   </section>
   <footer>
-    <a href=https://www.greenpeace.org/brasil/>ajude o Brasil a ter um futuro mais sustentavel</a>
+    <a href=https://www.greenpeace.org/brasil/>Ajude o Brasil a ter um futuro mais sustentavel</a>
   </footer>
    </body>
   </html>
