--- a/index3.html
+++ b/index3.html
@@ -44,7 +44,7 @@ Os agroquímicos são produtos químicos amplamente utilizados na agricultura pa
 </p>
 </section>
 <footer>
-  <a href=https://www.greenpeace.org/brasil/>Ajude o Brasil a ter um futuro mais sustentavel</a>
+  <a class="gradient" href=https://www.greenpeace.org/brasil/>Ajude o Brasil a ter um futuro mais sustentavel</a>
 </footer>
    </body>
   </html>
