--- a/index3.html
+++ b/index3.html
@@ -9,57 +9,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Meu Site Responsivo</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-        }
-        .container {
-            width: 80%;
-            margin: auto;
-            display: flex;
-            flex-wrap: wrap;
-        }
-        .item {
-            flex: 1 1 300px;
-            padding: 20px;
-            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            margin: 10px;
-            background-color: #f4f4f4;
-        }
-        img {
-            max-width: 100%;
-            height: auto;
-        }
-        @media (max-width: 600px) {
-            body {
-                font-size: 14px;
-            }
-        }
-    </style>
-</head>
-<body>
-    <div class="container">
-        <div class="item">
-            <h2>Item 1</h2>
-            <img src="https://via.placeholder.com/300" alt="Imagem 1">
-        </div>
-        <div class="item">
-            <h2>Item 2</h2>
-            <img src="https://via.placeholder.com/300" alt="Imagem 2">
-        </div>
-        <div class="item">
-            <h2>Item 3</h2>
-            <img src="https://via.placeholder.com/300" alt="Imagem 3">
-        </div>
-    </div>
+    
     <title>Sustentabilidade</title>
 </head>
-
 <body>
     <nav>
       <ul>
@@ -97,3 +49,46 @@ Os agroquímicos são produtos químicos amplamente utilizados na agricultura pa
 </footer>
    </body>
   </html>
+  <!DOCTYPE html>
+<html lang="pt-br">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Condensed:wght@500&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
+    <title>Sustentabilidade</title>
+</head>
+<body>
+    <nav>
+        <ul>
+            <li><a href="index.html">Sustentabilidade</a></li>
+            <li><a href="index2.html">Energia Renovável</a></li>
+            <li><a href="index4.html">Alternativa a Agroquímicos</a></li>
+            <li><a href="index5.html">Tapete de Cabelo</a></li>
+        </ul>
+    </nav>
+    <header>
+        <h1>Agroquímicos</h1>
+    </header>
+    <h2>Sustentabilidade no Meio Agrícola</h2>
+    <section class="onion">
+        <p>
+            Os agroquímicos são produtos químicos amplamente utilizados na agricultura para proteger as plantações e melhorar a produtividade dos cultivos. Entre os principais tipos estão os pesticidas, herbicidas, fungicidas e fertilizantes químicos. Os pesticidas são essenciais para controlar pragas que podem causar danos significativos às colheitas, enquanto os herbicidas são empregados para eliminar ervas daninhas que competem por recursos essenciais. Fungicidas são usados para prevenir e tratar doenças fúngicas que podem comprometer a saúde das plantas. Por fim, fertilizantes químicos fornecem nutrientes como nitrogênio, fósforo e potássio, fundamentais para o crescimento saudável das culturas.
+        </p>
+    </section>
+    <section class="carrot">
+        <img class="Tap" src="image copy 5.png" alt="tap">
+    </section>
+    <section class="potato">
+        <p>
+            Apesar dos benefícios, o uso indiscriminado de agroquímicos levanta preocupações ambientais e de saúde pública. A contaminação de solos e recursos hídricos, a resistência de pragas e ervas daninhas aos produtos químicos, e os potenciais efeitos adversos na fauna não-alvo são questões críticas. Por essa razão, muitos países adotam regulamentações rigorosas para o uso desses produtos, visando mitigar impactos negativos e promover práticas agrícolas sustentáveis.
+            Em resposta às preocupações ambientais, há um crescente movimento em direção a métodos de agricultura mais sustentáveis, como a agricultura orgânica e o uso integrado de manejo de pragas (IPM), que visam reduzir a dependência de agroquímicos sintéticos. Essas abordagens promovem práticas que preservam a biodiversidade, melhoram a saúde do solo e reduzem os riscos para a saúde humana e ambiental, enquanto ainda buscam manter a produtividade agrícola necessária para atender à demanda global por alimentos.
+        </p>
+    </section>
+    <footer>
+        <a class="gradient" href="https://www.greenpeace.org/brasil/">Ajude o Brasil a ter um futuro mais sustentável</a>
+    </footer>
+</body>
+</html>
