--- a/index2.html
+++ b/index2.html
@@ -14,13 +14,14 @@
     <nav>
       <ul>
           <li><a href="index.html">Sustentabilidade</a></li>
-          
           <li><a href="index3.html">Agroquimicos</a></li>
           <li><a href="index4.html">Alternativa à agroquímicos</a></li>
           <li><a href="index5.html">Tapete de cabelo</a></li>
       </ul>
   </nav>
     <header>
+      <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
       <h1>Sustentabilidade no Meio Agrícol</h1>
       </header>
   <h2>
