--- a/index4.html
+++ b/index4.html
@@ -21,6 +21,8 @@
       </ul>
   </nav>
     <header>
+      <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
       <h1>Sustentabilidade no Meio Agrícola</h1>
       </header>
   <h2>
