--- a/index3.html
+++ b/index3.html
@@ -20,6 +20,8 @@
         </ul>
     </nav>
     <header>
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@400;700&display=swap" rel="stylesheet">
+
         <h1>Agroquímicos</h1>
     </header>
     <h2>Sustentabilidade no Meio Agrícola</h2>
